tests/suite/fail/generated/lexer/fail_unclosed_comment_1.ny
//~ ERROR unclosed block comment
fn main() {
    let x = 1 /* unclosed block 1
    print(x)
}
